<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.symptoms.ArmWeakness">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:background="#fcf8f3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="138dp"
                android:layout_height="141dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/stroke_face" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/carter_one"
                    android:text="@string/face_dropping_title"
                    android:textColor="#698474"
                    android:textSize="35sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"

                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/carter_one"
                    android:text="@string/face_dropping_subtitle"
                    android:textAlignment="center"
                    android:textColor="#698474">

                </TextView>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#ffaaa5"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/face_dropping_symptoms"
                android:fontFamily="@font/carter_one"
                android:textColor="#698474"
                android:textAlignment="center"
                android:textSize="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/carter_one"
                android:text="@string/face_dropping_symptoms_list"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="#698474"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#698474">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/carter_one"
                    android:text="@string/face_dropping_questions1"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="#fcf8f3"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/face_dropping_questions2"
                    android:textSize="25dp"
                    android:textColor="#fcf8f3"
                    android:fontFamily="@font/carter_one"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/strokeface2" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>